--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npx rollup -p @rollup/plugin-node-resolve src/assets/m3/index.js > src/assets/m3/bundle.js && ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "storybook": "ng run MicroManager:storybook",
+    "build-storybook": "ng run MicroManager:build-storybook",
+    "storybook-docs": "storybook dev --docs"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +21,12 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@material/web": "^1.0.0-pre.7",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@storybook/angular": "^7.0.8",
+    "rollup": "^3.21.4",
     "rxjs": "~7.8.0",
+    "storybook": "^7.0.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -26,13 +34,24 @@
     "@angular-devkit/build-angular": "^16.0.0",
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
+    "@compodoc/compodoc": "^1.1.19",
+    "@storybook/addon-essentials": "^7.0.9",
+    "@storybook/addon-interactions": "^7.0.9",
+    "@storybook/addon-links": "^7.0.9",
+    "@storybook/blocks": "^7.0.9",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.1",
     "jasmine-core": "~4.6.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~5.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "~4.9.3"
   }
 }
